--- a/index.html
+++ b/index.html
@@ -3,18 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ateliê Manager - Sistema de Gestão para Ateliê de Costura</title>
+    <title>Ateliê Célia Severo - Sistema de Gestão</title>
     <meta name="description" content="Sistema completo de gestão para ateliê de costura. Gerencie clientes, serviços e pedidos de forma simples e eficiente." />
     <meta name="author" content="Ateliê Manager" />
 
-    <meta property="og:title" content="Ateliê Manager - Sistema de Gestão para Ateliê de Costura" />
+    <meta property="og:title" content="Ateliê Célia Severo - Sistema de Gestão" />
     <meta property="og:description" content="Sistema completo de gestão para ateliê de costura. Gerencie clientes, serviços e pedidos de forma simples e eficiente." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
